add Fake Objects, fix JaCoCo